--- a/portfolio_management/src/main/resources/utd/database/LoginPage.fxml
+++ b/portfolio_management/src/main/resources/utd/database/LoginPage.fxml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="474.0" prefWidth="608.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="474.0" prefWidth="608.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="utd.database.LoginPageController">
    <children>
       <Label alignment="CENTER" layoutX="261.0" layoutY="76.0" text="Login">
          <font>
@@ -17,13 +20,16 @@
             <Font size="17.0" />
          </font>
       </Label>
-      <Label layoutX="162.0" layoutY="262.0" text="Password:">
+      <Label layoutX="162.0" layoutY="238.0" text="Password:">
          <font>
             <Font size="17.0" />
          </font></Label>
-      <TextField layoutX="267.0" layoutY="187.0" promptText="username" />
-      <TextField layoutX="267.0" layoutY="259.0" promptText="password" />
+      <TextField fx:id="usernameTextField" layoutX="267.0" layoutY="187.0" promptText="username" />
       <Text layoutX="178.0" layoutY="158.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome! To see your Portfolio please login" />
-      <Button layoutX="276.0" layoutY="330.0" mnemonicParsing="false" text="Login" />
+      <Button fx:id="loginButton" layoutX="281.0" layoutY="330.0" mnemonicParsing="false" onAction="#loginButtonOnAction" prefHeight="25.0" prefWidth="52.0" text="Login" />
+      <PasswordField fx:id="passwordTextField" layoutX="267.0" layoutY="239.0" promptText="password" />
+      <Button fx:id="cancelButton" layoutX="281.0" layoutY="373.0" mnemonicParsing="false" onAction="#cancelButtonOnAction" text="Cancel" />
+      <Label fx:id="loginMessageLabel" alignment="CENTER" layoutX="178.0" layoutY="285.0" prefHeight="26.0" prefWidth="256.0" textAlignment="CENTER" textFill="#d71616" />
    </children>
 </AnchorPane>
+
